--- a/package.json
+++ b/package.json
@@ -214,33 +214,35 @@
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "express": "4.14.0",
-    "fontfaceobserver": "2.0.7",
-    "immutable": "3.8.1",
+    "immutable": "^3.8.1",
     "intl": "1.2.5",
     "invariant": "2.2.2",
     "ip": "1.1.4",
     "lodash": "4.17.2",
     "minimist": "1.2.0",
-    "react": "15.4.1",
-    "react-dom": "15.4.1",
-    "react-helmet": "3.2.2",
+    "prop-types": "^15.5.10",
+    "react": "next",
+    "react-dom": "next",
+    "react-hot-loader": "next",
     "react-intl": "2.1.5",
-    "react-redux": "4.4.6",
-    "react-router": "3.0.0",
+    "react-redux": "5.0.5",
+    "react-router": "3.0.5",
     "react-router-redux": "4.0.6",
-    "react-router-scroll": "0.4.1",
+    "recompose": "^0.25.0",
+    "redbox-react": "^1.5.0",
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
+    "redux-logger": "^3.0.6",
     "redux-saga": "0.14.0",
-    "reselect": "2.5.4",
+    "reselect": "^3.0.1",
     "sanitize.css": "4.1.0",
-    "styled-components": "1.1.2",
+    "styled-components": "^2.1.2",
     "warning": "3.0.0",
-    "whatwg-fetch": "2.0.1"
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
-    "babel-core": "6.21.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.10",
     "babel-plugin-dynamic-import-node": "1.0.0",
@@ -288,7 +290,7 @@
     "sinon": "2.0.0-pre",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "2.2.0-rc.3",
+    "webpack": "^3.6.0",
     "webpack-dev-middleware": "1.9.0",
     "webpack-hot-middleware": "2.15.0"
   }
