--- a/package.json
+++ b/package.json
@@ -214,18 +214,18 @@
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "express": "4.14.0",
-    "immutable": "^3.8.1",
+    "immutable": "^3.8.2",
     "intl": "1.2.5",
     "invariant": "2.2.2",
     "ip": "1.1.4",
     "lodash": "4.17.2",
     "minimist": "1.2.0",
     "prop-types": "^15.5.10",
-    "react": "next",
-    "react-dom": "next",
-    "react-hot-loader": "next",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-hot-loader": "^3.1.3",
     "react-intl": "2.1.5",
-    "react-redux": "5.0.5",
+    "react-redux": "^5.0.6",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.6",
     "recompose": "^0.25.0",
@@ -233,10 +233,10 @@
     "redux": "3.6.0",
     "redux-immutable": "3.0.8",
     "redux-logger": "^3.0.6",
-    "redux-saga": "0.14.0",
+    "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
     "sanitize.css": "4.1.0",
-    "styled-components": "^2.1.2",
+    "styled-components": "^2.2.3",
     "warning": "3.0.0",
     "whatwg-fetch": "^2.0.3"
   },
@@ -290,7 +290,7 @@
     "sinon": "2.0.0-pre",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "^3.6.0",
+    "webpack": "^3.8.1",
     "webpack-dev-middleware": "1.9.0",
     "webpack-hot-middleware": "2.15.0"
   }
